navigation mobile toggle button fix

--- a/sass-compile/scss/_styles.scss
+++ b/sass-compile/scss/_styles.scss
@@ -9,9 +9,9 @@ $light: #fffdef;
 .hero,
 .header,
 .headline,
-.newsletter {
+.newsletter,
+.share {
   h1 {
-    // font-size: 3rem;
     font-size: calc(1.75rem + 1.5vw);
     margin-bottom: 1.5rem;
   }
@@ -23,7 +23,7 @@ $light: #fffdef;
 }
 
 .bg-section {
-  background-color: #fffdef;
+  background-color: $light;
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
@@ -48,6 +48,15 @@ $light: #fffdef;
   &:hover {
     border-color: #000;
   }
+}
+
+.navbar-toggler {
+  border: 2px solid black;
+  background-color: $primary;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
 }
 
 .btn-primary {
@@ -207,7 +216,10 @@ $light: #fffdef;
   }
 
   p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    @media (min-width: 768px) {
+      font-size: 1.5rem;
+    }
   }
 }
 
